# Data-Oriented-Missile-Sim

./: .gitignore  CMakeLists.txt  DevNotes.txt  README.md
Diagrams/: 000_000_HighLevelActivity.drawio  001_000_RunSimulationActivity.drawio  001_001_InitializeSimulationActivity.drawio  001_002_UpdateSimulationSequence.drawio  FuturePlans.drawio
Inputs/InputSet1/: InputSet1.in
Outputs/: FirstStageSrmManager.txt  SecondStageSrmManager.txt
Scripts/: _run_tests.sh  build.sh  clean_build.sh  configure.sh  run.sh  run_InputSet1.sh
Source/: CMakeLists.txt  Constants.h  Entity.h  HelperMethods.h  Simulation.cpp  Simulation.h  Utilities.h  main.cpp
Source/Components/: AccumulatorComponent.h  ClockComponent.h  Component.h  MassComponent.h  MovementComponent.h  SoftwareComponent.h  SolidRocketMotorComponent.h  TransformComponent.h  Utilities.h
Source/Components/MassComponents/: AllUpRoundMassComponent.h  MassComponent.h
Source/Core/: AttributesManager.h  Configurations.h  ILoggable.h
Source/Managers/: AccumulatorManager.h  ClockManager.h  ComponentManager.h  EntityManager.cpp  EntityManager.h  Managers.h  MassManager.cpp  MassManager.h  MovementManager.cpp  MovementManager.h  SolidRocketMotorManager.h  TestSoftwareManager.h  TransformManager.cpp  TransformManager.h
Source/MathTypes/: Matrix3.h  Matrix4.h  Quaternion.h  Vector3.h
Source/Parsers/BinaryFileParser/: BinaryFileParser.h
Source/Parsers/CommandLineParser/: CommandLineParser.cpp  CommandLineParser.h
Source/Parsers/CommandLineParser/Commands/: CommandLineCommand.h  InputFileCommand.h
Source/Parsers/InputFileParser/: InputFileParser.h
Source/Systems/: BoosterSystem.cpp  BoosterSystem.h  EarthSystem.h  IntegrationSystem.h  IntegrationSystem_Euler.h  IntegrationSystem_RK4.h  LoggingSystem.h  System.h  TestSoftwareSystem.h
Source/Systems/BoosterSystems/: FirstStageBoosterSystem.cpp  FirstStageBoosterSystem.h  SecondStageBoosterSystem.cpp  SecondStageBoosterSystem.h
Source/_UnitTests/: _unitTests.h
Source/_UnitTests/SourceTests/: HelperMethodsTests.h
Source/_UnitTests/SourceTests/MathTypesTests/: Matrix3Tests.h
Source/_UnitTests/SourceTests/SystemsTests/: IntegrationSystem_EulerTests.h
Source/_UnitTests/_Utilities/: _Utilities.h
Source/application/: CMakeLists.txt
Source/application/include/: CommandLineArguments.h  CommandLineCommand.h  CommandLineParser.h  InputFileCommand.h  InputFileParser.h  Simulation.h
Source/application/src/: CommandLineParser.cpp  InputFileParser.cpp  Simulation.cpp
Source/common/: CMakeLists.txt
Source/common/include/: DomSimConstants.h  DomSimEnumerations.h
Source/common/math_types/: CMakeLists.txt
Source/common/math_types/include/: Matrix3.h  Matrix4.h  Quaternion.h  Vector3.h
Source/common/math_types/src/: Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Vector3.cpp
Source/components/: CMakeLists.txt
Source/components/include/: AccumulatorComponent.h  ClockComponent.h  Component.h  ComponentUtilities.h  MassComponent.h  MovementComponent.h  SoftwareComponent.h  SolidRocketMotorComponent.h  TransformComponent.h
Source/components/src/: AccumulatorComponent.cpp  ClockComponent.cpp  Component.cpp  ComponentUtilities.cpp  MassComponent.cpp  MovementComponent.cpp  SoftwareComponent.cpp  SolidRocketMotorComponent.cpp  TransformComponent.cpp
Source/core/: CMakeLists.txt
Source/core/include/: AttributesManager.h  Configurations.h  CoreConstants.h  CoreEnumerations.h  ILoggable.h  TypeDefinitions.h
Source/core/src/: AttributesManager.cpp  Configurations.cpp
Source/logging/: CMakeLists.txt
Source/logging/include/: BinaryLogger.h
Source/logging/src/: BinaryLogger.cpp
Source/managers/: CMakeLists.txt
Source/managers/include/: AccumulatorManager.h  ClockManager.h  ComponentManager.h  EntityManager.h  ManagersConstants.h  MassManager.h  MovementManager.h  SolidRocketMotorManager.h  TestSoftwareManager.h  TransformManager.h
Source/managers/src/: AccumulatorManager.cpp  ClockManager.cpp  EntityManager.cpp  MassManager.cpp  MovementManager.cpp  SolidRocketMotorManager.cpp  TestSoftwareManager.cpp  TransformManager.cpp
Source/systems/: CMakeLists.txt
Source/systems/include/: EarthSystem.h  FirstStageBoosterSystem.h  IIntegrationSystem.h  IntegrationSystem_Euler.h  IntegrationSystem_RK4.h  SecondStageBoosterSystem.h  System.h  TestSoftwareSystem.h
Source/systems/src/: EarthSystem.cpp  FirstStageBoosterSystem.cpp  IntegrationSystem_Euler.cpp  IntegrationSystem_RK4.cpp  SecondStageBoosterSystem.cpp  System.cpp  TestSoftwareSystem.cpp
Source/utilities/: CMakeLists.txt
Source/utilities/include/: Utilities.h
Source/utilities/src/: Utilities.cpp
